 - [web] allow to fetch unseen count of all mailboxes (#522, #2776, #4276)
 - [web] add rel="noopener" to external links (#4764)
 - [web] add Indonesian (id) translation
 - [web] updated Angular Material to version 1.1.19
 - [web] replaced bower packages by npm packages
 - [web] restored mail threads (#3478, #4616, #4735)
 - [web] reflect attendee type with generic icon (person/group/resource)

Bug fixes
 - [web] fixed wrong translation of custom calendar categories
 - [web] fixed wrong colors assigned to default calendar categories
 - [web] lowered size of headings on small screens
 - [web] fixed scrolling in calendars list on Android
 - [web] keep center list of Calendar module visible on small screens
 - [web] check for duplicate name only if address book name is changed
 - [web] improved detection of URLs and email addresses in text mail parts
 - [web] fixed page reload with external IMAP account (#4709)
 - [web] constrained absolute-positioned child elements of HTML mail parts
 - [web] fixed useless scrolling when deleting a message
 - [web] don't hide compose button if messages list is visible
 - [web] fixed next/previous slots with external attendees
 - [web] fixed restoration of sub mailbox when reloading page
 - [web] use matching address of attendee (#4473)
 - [core] allow super users to modify any event (#4216)
 - [core] correctly handle the full cert chain in S/MIME
 - [core] handle multidays events in freebusy data
 - [core] avoid exception on recent GNUstep when attached file has no filename (#4702)
 - [core] avoid generating broken DTSTART for the freebusy.ifb file (#4289)
 - [core] consider DAVx5 like Apple Calendar (#4304)
 - [core] improve handling of signer certificate (#4742)
 - [core] added safety checks in S/MIME (#4745)
 - [core] fixed domain placeholder issue when using sogo-tool (#4723)

4.0.7 (2019-02-27)
------------------

Bug fixes
 - [web] date validator now handles non-latin characters