@@ -7,7 +7,7 @@
    xmlns:label="OGo:label"
    xmlns:uix="OGo:uix">
 
-    <div class="mailUserRights" layout="column">
+  <div class="mailUserRights" layout="column">
     
     <md-checkbox name="userCanReadMails"
                  ng-model="acl.selectedUser.rights.userCanReadMails"
