@@ -6,7 +6,7 @@
     xmlns:label="OGo:label">
   <md-dialog flex="60" flex-sm="80" flex-xs="100">
     <form name="eventForm" class="md-inline-form" ng-submit="editor.save(eventForm)">
-      <md-toolbar ng-class="editor.component.getClassName('bg')">
+      <md-toolbar>
         <div class="md-toolbar-tools">
           <md-icon class="material-icons sg-icon-toolbar-bg">event</md-icon>
           <!-- summary -->
@@ -36,7 +36,13 @@
               <md-select ng-model="editor.component.destinationCalendar"
                          ng-change="editor.changeCalendar()">
                 <md-option ng-repeat="calendar in editor.service.$findAll(null, true)"
-                           ng-value="calendar.id">{{calendar.name}}</md-option>
+                           ng-value="calendar.id">
+                  <div layout="row" layout-align="start center">
+                    <div class="sg-color-chip"
+                         ng-class="calendar.getClassName('bg')"><!-- color --></div>
+                    {{calendar.name}}
+                  </div>
+                </md-option>
               </md-select>
             </md-input-container>
           </div>
@@ -59,7 +65,11 @@
                 md-items="category in editor.component.constructor.filterCategories(editor.categories.searchText) | orderBy"
                 md-min-length="0"
                 label:placeholder="Add a category">
-              <span md-highlight-text="editor.categories.searchText">{{category}}</span>
+              <div layout="row" layout-align="start center">
+                <div class="sg-color-chip"
+                     ng-style="{ 'background-color': editor.component.constructor.$categories[category] }"><!-- color --></div>
+                <div md-highlight-text="editor.categories.searchText" md-highlight-flags="^i">{{category}}</div>
+              </div>
             </md-autocomplete>
           </md-chips>
           <div layout="row" layout-align="space-between center" layout-wrap="layout-wrap">
