@@ -137,7 +137,7 @@
   </div><!-- row -->
   <!-- freebusy caption -->
   <div layout="row" layout-align="end center" class="sg-padded--top">
-    <div class="quarter"><div class="busy sg-color-chip"><!-- busy --></div></div>
+    <div class="quarter"><div class="busy sg-color-sample"><!-- busy --></div></div>
     <label class="md-caption"><var:string label:value="Busy"/></label>
     <div class="quarter"><div class="sg-no-freebusy sg-color-sample"><!-- no fb --></div></div>
     <label class="md-caption"><var:string label:value="No free-busy information"/></label>
