@@ -794,13 +794,6 @@ $quarter_height: 10px;
     margin: 0 $baseline-grid 0 $baseline-grid*2;
     padding: 0;
   }
-  .sg-color-chip {
-    border-radius: 50%;
-    border-width: 0;
-    width: $baseline-grid;
-    height: $baseline-grid;
-    margin: 0 $baseline-grid 0 $baseline-grid*2;
-  }
 }
 
 /**
